// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`voiceDuration renders 0 1`] = `
Array [
  .c0 {
  voice-duration: 0;
}

<div
    className="c0"
  />,
  .c0 {
  voice-duration: 0;
}

<div
    className="c0"
  />,
  .c0 {
  voice-duration: 0;
}

<div
    className="c0"
  />,
  .c0 {
  voice-duration: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceDuration renders function 1`] = `
Array [
  .c0 {
  voice-duration: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  voice-duration: has;
}

<div
    className="c0"
  />,
  .c0 {
  voice-duration: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  voice-duration: has;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceDuration renders invalid theme path 1`] = `
Array [
  .c0 {
  voice-duration: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  voice-duration: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  voice-duration: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  voice-duration: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceDuration renders negative number 1`] = `
Array [
  .c0 {
  voice-duration: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-duration: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-duration: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  voice-duration: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceDuration renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  voice-duration: July;
}

@media screen and (min-width:November) {
  .c0 {
    voice-duration: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-duration: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-duration: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-duration: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  voice-duration: July;
}

@media screen and (min-width:November) {
  .c0 {
    voice-duration: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-duration: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-duration: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-duration: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  voice-duration: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    voice-duration: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-duration: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-duration: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-duration: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  voice-duration: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    voice-duration: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-duration: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-duration: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-duration: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`voiceDuration renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    voice-duration: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-duration: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-duration: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-duration: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    voice-duration: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-duration: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-duration: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-duration: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    voice-duration: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-duration: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-duration: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-duration: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    voice-duration: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-duration: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-duration: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-duration: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`voiceDuration renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  voice-duration: July;
}

@media May {
  .c0 {
    voice-duration: August;
  }
}

@media April {
  .c0 {
    voice-duration: September;
  }
}

@media January {
  .c0 {
    voice-duration: November;
  }
}

@media April {
  .c0 {
    voice-duration: August;
  }
}

@media June {
  .c0 {
    voice-duration: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  voice-duration: July;
}

@media May {
  .c0 {
    voice-duration: August;
  }
}

@media April {
  .c0 {
    voice-duration: September;
  }
}

@media January {
  .c0 {
    voice-duration: November;
  }
}

@media April {
  .c0 {
    voice-duration: August;
  }
}

@media June {
  .c0 {
    voice-duration: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  voice-duration: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    voice-duration: November;
  }
}

@media April {
  .c0 {
    voice-duration: January;
  }
}

@media January {
  .c0 {
    voice-duration: December;
  }
}

@media April {
  .c0 {
    voice-duration: April;
  }
}

@media June {
  .c0 {
    voice-duration: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  voice-duration: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    voice-duration: November;
  }
}

@media April {
  .c0 {
    voice-duration: January;
  }
}

@media January {
  .c0 {
    voice-duration: December;
  }
}

@media April {
  .c0 {
    voice-duration: April;
  }
}

@media June {
  .c0 {
    voice-duration: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`voiceDuration renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    voice-duration: July;
  }
}

@media April {
  .c0 {
    voice-duration: August;
  }
}

@media January {
  .c0 {
    voice-duration: September;
  }
}

@media April {
  .c0 {
    voice-duration: November;
  }
}

@media June {
  .c0 {
    voice-duration: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    voice-duration: July;
  }
}

@media April {
  .c0 {
    voice-duration: August;
  }
}

@media January {
  .c0 {
    voice-duration: September;
  }
}

@media April {
  .c0 {
    voice-duration: November;
  }
}

@media June {
  .c0 {
    voice-duration: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    voice-duration: January;
  }
}

@media April {
  .c0 {
    voice-duration: December;
  }
}

@media January {
  .c0 {
    voice-duration: April;
  }
}

@media April {
  .c0 {
    voice-duration: May;
  }
}

@media June {
  .c0 {
    voice-duration: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    voice-duration: January;
  }
}

@media April {
  .c0 {
    voice-duration: December;
  }
}

@media January {
  .c0 {
    voice-duration: April;
  }
}

@media April {
  .c0 {
    voice-duration: May;
  }
}

@media June {
  .c0 {
    voice-duration: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`voiceDuration renders postitive number 1`] = `
Array [
  .c0 {
  voice-duration: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-duration: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-duration: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  voice-duration: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceDuration renders string 1`] = `
Array [
  .c0 {
  voice-duration: July;
}

<div
    className="c0"
  />,
  .c0 {
  voice-duration: July;
}

<div
    className="c0"
  />,
  .c0 {
  voice-duration: June;
}

<div
    className="c0"
  />,
  .c0 {
  voice-duration: June;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceDuration renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`voiceDuration renders valid theme path 1`] = `
Array [
  .c0 {
  voice-duration: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  voice-duration: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  voice-duration: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  voice-duration: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
